--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,5 +26,21 @@ services:
     stdin_open: true
     tty: true
 
+  prometheus:
+    image: prom/prometheus
+    restart: unless-stopped
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml  # Monte le fichier de configuration
+    ports:
+      - "9090:9090"
+
+  grafana:
+    image: grafana/grafana
+    restart: unless-stopped
+    ports:
+      - "3000:3000"
+    environment:
+      GF_SECURITY_ADMIN_PASSWORD: admin
+
 volumes:
   mysql_data:
