--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,10 @@ spring.datasource.password=root
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto= update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+management.endpoints.web.exposure.include=prometheus,health,info
+management.endpoint.prometheus.enabled=true
+management.endpoint.health.enabled=true
+management.endpoint.info.enabled=true
 ## LOGGING ##
 logging.level.root= info
 # Logging pattern for the console
